--- a/ekimeimysql1/templates/ekimeimysql1/upload.html
+++ b/ekimeimysql1/templates/ekimeimysql1/upload.html
@@ -5,16 +5,29 @@
 <body>
 
 <h3>アップロードするよ</h3>
-<form action="{% url 'ekimeimysql1:uploadStation' %}" method="post" enctype="multipart/form-data">
+
+<form action="{% url 'ekimeimysql1:uploadRailwayType' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
-  <button type="submit" class="btn" name="button">駅名アップロード</button>
+  <button type="submit" class="btn" name="button">路線種別アップロード</button>
 </form>
 
-<form action="{% url 'ekimeimysql1:uploadLine' %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'ekimeimysql1:uploadCountry' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
-  <button type="submit" class="btn" name="button">路線アップロード</button>
+  <button type="submit" class="btn" name="button">国アップロード</button>
+</form>
+
+<form action="{% url 'ekimeimysql1:uploadRegion' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
+  <button type="submit" class="btn" name="button">地域アップロード</button>
+</form>
+
+<form action="{% url 'ekimeimysql1:uploadPrefecture' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
+  <button type="submit" class="btn" name="button">都道府県アップロード</button>
 </form>
 
 <form action="{% url 'ekimeimysql1:uploadCompany' %}" method="post" enctype="multipart/form-data">
@@ -23,28 +36,28 @@
   <button type="submit" class="btn" name="button">事業者アップロード</button>
 </form>
 
-<form action="{% url 'ekimeimysql1:uploadPref' %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'ekimeimysql1:uploadLine' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
-  <button type="submit" class="btn" name="button">都道府県アップロード</button>
+  <button type="submit" class="btn" name="button">路線アップロード</button>
 </form>
 
-<form action="{% url 'ekimeimysql1:uploadRailwayType' %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'ekimeimysql1:uploadStation' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
-  <button type="submit" class="btn" name="button">路線種別アップロード</button>
-</form>
-
-<form action="{% url 'ekimeimysql1:uploadStationService' %}" method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
-  <button type="submit" class="btn" name="button">駅名(運行系統)アップロード</button>
+  <button type="submit" class="btn" name="button">駅名アップロード</button>
 </form>
 
 <form action="{% url 'ekimeimysql1:uploadLineService' %}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
   <button type="submit" class="btn" name="button">路線(運行系統)アップロード</button>
+</form>
+
+<form action="{% url 'ekimeimysql1:uploadStationService' %}" method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <input type="file" class="dropify" data-default-file="ファイルを選択してください" name="csv">
+  <button type="submit" class="btn" name="button">駅名(運行系統)アップロード</button>
 </form>
 
 <a href="{% url 'ekimeimysql1:StationDelete' %}">駅全削除</a>
@@ -57,4 +70,5 @@ $(function(){
   $('.dropify').dropify();
 })
 </script>
+  <small>&copy; 2020 nignagIC</small>
 </body>
