--- a/ekimeimysql1/templates/ekimeimysql1/top.html
+++ b/ekimeimysql1/templates/ekimeimysql1/top.html
@@ -28,8 +28,8 @@
 <section class="top-movie-list">
 	<div class="movie-list-left">
 		<h4 class="movie-list-header">新着動画</h4>
+		{% if movies %}
 		<ul class="movie-ul">
-			{% if movies %}
 			{% for movie in movies %}
 			<li class="movie-card">
 				<a href="{% url 'ekimeimysql1:detail' movie.main_id %}">
@@ -49,18 +49,36 @@
 				</a>
 			</li>
 			{% endfor %}
-			{% else %}
+		{% else %}
 			<p>該当する動画が見つかりませんでした。</p>
-			{% endif %}
 		</ul>
+		{% endif %}
+		<a href="{% url 'ekimeimysql1:list' %}">もっと見る</a>
 	</div>
 	<div class="movie-list-right">
+		<div class="movie-list-right-inner">ここに何かを置く(未定)</div>
 	</div>
 </section>
 <section class="top-notice-container">
 	<div class="top-notice">
+		<h5 class="notice-header">お知らせ</h5>
+		<ul class="notice-ul">
+			<li class="notice-li">
+				<p class="notice-top">2020/6/1　<span>全体</span></p>
+				<div class="notice-bottom"><a>サイトの試作を公開しました</a></div>
+			</li>
+		</ul>
 	</div>
 	<div class="top-update">
+		<h5 class="update-header">更新情報</h5>
+		<ul class="update-ul">
+			{% for info in info_list %}
+			<li class="update-li">
+				<p class="update-top">{{ info.reg_date|timezone:'Asia/Tokyo'|date:"Y/n/d" }}　<span>動画{{ info.get_is_create_display }}</span></p>
+				<div class="update-bottom">「<a href="{% url 'ekimeimysql1:detail' info.movie.main_id %}">{{ info.movie }}</a>」を{{ info.get_is_create_display }}しました</div>
+			</li>
+			{% endfor %}
+		</ul>
 	</div>
 </section>
 {% endblock %}
